# agentic-invoice-process

./: .dockerignore  .env  Dockerfile  ProjectStructure.md  QUICK_START.md  QWEN_STATUS.md  README.md  TESTING_GUIDE.md  demo_qwen_capabilities.py  docker-compose.yml  health.sh  main.py  pyproject.toml  pyproject_minimal.toml  requirements.txt  sample_invoice.txt  start.sh  stop.sh  test_qwen_integration.py  test_system.py
agents/: __init__.py  approval_agent.py  audit_agent.py  base_agent.py  data_extraction_agent.py  document_parser_agent.py  regional_compliance_agent.py  validation_agent.py
auth/: __init__.py  auth_manager.py  password_utils.py  session_manager.py
config/: __init__.py  regional_rules.py  sessions.json  settings.py  users.json
data/invoices/: sample_invoice.txt
logs/: audit.jsonl
models/: __init__.py  invoice_model.py  processing_result.py
orchestrator/: __init__.py  agent_coordinator.py  workflow_manager.py
scripts/: install.service  install_production.sh  setup_qwen.sh  start_services.sh  status.sh  stop_services.sh
ui/: __init__.py  streamlit_app.py
ui/components/: __init__.py  dashboard_component.py  login_component.py  results_component.py  upload_component.py
utils/: __init__.py  document_processor.py  llama_index_manager.py  ollama_client.py
